--- a/docs/DataFlows/06.DataFlow-Reuse.md
+++ b/docs/DataFlows/06.DataFlow-Reuse.md
@@ -46,11 +46,11 @@ With the inputs and outputs exposed, our resulting DataFlow can now be encapsula
 
 ![!Code Reuse New Custom Module](img/03.06.Img_2.png)
 
-Now, a parent DataFlow may use this just like any other Module. For example, we can reuse the above DataFlow three times as follows:
+Now, a parent DataFlow may use this "App Reference Module" just like any other Module. For example, we can reuse the above DataFlow three times as follows:
 
 ![!Code Reuse Using New Module](img/03.06.Img_3.png)
 
-Here, we upload a single CSV file, and flow the resulting data table into three instances of our custom Module to perform a SUM, AVG and COUNT on a specific column.
+Here, we upload a single CSV file, and flow the resulting data table into three instances of our custom App Reference Module to perform a SUM, AVG and COUNT on a specific column.
 
 ## Custom Modules
 
@@ -60,16 +60,16 @@ As an example, assume that a repetitive data engineering task requires you to re
 
 ![!Code Reuse Example](img/03.06.Img_4.png)
 
-Note that here, we used the Python Code Module, but you may use any number of languages (from Python to R to SAS…). The code Module allows you to insert your own algorithm (in any number of languages).
+Note that here, we used the Python Code Module, but you may use any number of languages (from Python to R to SAS). The code Module allows you to insert your own algorithm (in any number of languages).
 
 The above DataFlow is encapsulated as a single custom App Reference Module.
 
 ![!Code Reuse Example New Module](img/03.06.Img_5.png)
 
-And, with Composable being a collaborative platform, you may share this custom App Reference Module with other users within your enterprise.
+And, with Composable being a collaborative platform, you may share this custom App Reference Module with other users within your organization.
 
 ## Summary
 
-For more complex workflows, you can logically group a set of Modules and encapsulate them into their own child DataFlow (referred to as an App Reference Module), and have a parent DataFlow application reference and call the child DataFlow. The App Reference Modules looks and feels like any other Module, but its functionality is to call the referenced DataFlow. To provide inputs into the DataFlow, and retrieve certain outputs, the referenced DataFlow must have certain Module inputs and outputs marked as externalized with additional data (name and description). The DataFlow author does this by adding special Modules that externalize inputs and outputs. These external Modules then become the inputs and outputs in the App Reference Module in the calling DataFlow application.
+For more complex workflows, you can logically group a set of Modules and encapsulate them into their own child DataFlow (referred to as an App Reference Module), and have a parent DataFlow application reference and call the child DataFlow. The App Reference Module looks and feels like any other Module, but its functionality is to call the referenced DataFlow. To provide inputs into the DataFlow, and retrieve certain outputs, the referenced DataFlow must have certain Module inputs and outputs marked as externalized with additional data (name and description). The DataFlow author does this by adding the External Input\Output Modules that externalize inputs and outputs. These external Modules then become the inputs and outputs in the App Reference Module in the calling DataFlow application.
 
 In conjunction with a code Module, for languages ranging from R to Python to SAS, custom Modules can be developed rapidly, reused across multiple DataFlows, and shared with other users.
