--- a/docs/DataFlows/08.Example-DataFlows.md
+++ b/docs/DataFlows/08.Example-DataFlows.md
@@ -143,7 +143,7 @@ namespace Example
 ```
 
 !!! note
-    This code block outputs a Composable Table, and therefore uses the directive 'using CompAnalytics.Contracts.Tables;.' For more information on Composable Tables, see [this article](https://blog.composable.ai/2016/10/31/advanced-table-manipulation-with-the-code-module/).
+    This code block outputs a Composable Table, and therefore uses the directive `using CompAnalytics.Contracts.Tables;` as explained in the [Code Module](../DataFlows/09.Module-Details/Code-Module.md) page. For additional information on using Composable Tables, see also [this article](https://blog.composable.ai/2016/10/31/advanced-table-manipulation-with-the-code-module/).
 
 The result is a table.
 
