--- a/docs/DataFlows/02.Composable-Designer.md
+++ b/docs/DataFlows/02.Composable-Designer.md
@@ -74,7 +74,7 @@ The Properties Panel, on the right-hand side of the canvas, includes:
 
 - The **Module Info** card, which provides information on the currently selected Module.
 
-- The **Options** card, where overall DataFlow settings can be applied. These include:
+- The **Options** card, where global DataFlow-level settings can be applied. These include:
 
     - **Avoid Saving Runs**: When enabled, the results of previous runs will not be saved in the Run History page.
     - **Parallel Execution**: When enabled, Modules in a DataFlow execute in parallel, as soon as all their input parameters are met.
