--- a/docs/DataFlows/04.Modules.md
+++ b/docs/DataFlows/04.Modules.md
@@ -62,7 +62,7 @@ After importing a Custom Module Extension into the Composable instance, these cu
 
 ## Module Upgrade
 
-Modules are version controlled, and over time may be updated (with new inputs, outputs, logic, etc.) when the Composable instance is updated. If a Module is modified, the existing DataFlow will continue to use the version of the Module that was originally used when the DataFlow was first authored, and a gear icon will appear on the updated Module. The DataFlow author has the choice to continue using the original Module version, or click on the gear icon to upgrade the Module
+Modules are version controlled, as described in detail at [Versioning Modules](./07.Custom-Modules.md#Versioning Modules), and over time may be updated (with new inputs, outputs, logic, etc.) when the Composable instance is updated. If a Module is modified, the existing DataFlow will continue to use the version of the Module that was originally used when the DataFlow was first authored, and a clickable gear icon will appear on the top of the updated Module. The DataFlow author has the choice to continue using the original Module version, or click on the gear icon to upgrade the Module.
 
 ![Module upgrades are available by clicking on the gear icon](img/05.ModuleUpgrade-01.png)
 
