--- a/docs/DataFlows/07.Custom-Modules.md
+++ b/docs/DataFlows/07.Custom-Modules.md
@@ -57,15 +57,15 @@ If you were to save this in the project CompAnalytics.Execution.Modules, under t
 !!! note
     CompAnalytics.Execution.Modules is only one possible namespace; Modules can exist in any namespace.
 
-Every Module class inherits from ModuleExecutor (which specifies the Execute method), and has the ModuleType and Description attributes associated with it. Here is what the attribute parameters do:
+Every Module class inherits from `ModuleExecutor` (which specifies the Execute method), and has the `ModuleType` and `Description` attributes associated with it. Here is what the attribute parameters do:
 
-* ModuleType.Name: The name of the Module which is visible to the user in the app designer.
-* ModuleType.Namespace: e.g., comp.companalytics,
-* ModuleType.Category: Determines which bin in the Module Library the Module will appear in. Use one of the constants from the ModuleCategory class.
-* ModuleType.Icon: Not used in this example. A path to an image which appears next to the Module name in the app designer. For instance, “./images/module-icons/calculator.png” will result in a calculator icon.
-* ModuleType.EditableInputs: Not used in this example.
-* ModuleType.Width: Not used in this example. The default width of the Module in the Composable Designer. If not specified, it is 150 pixels.
-* Description.Description: The text which appears in tooltips and in the Module Info box in the Composable Designer.
+- **ModuleType.Name**: The name of the Module which is visible to the user in the app designer.
+- **ModuleType.Namespace**: e.g., comp.companalytics,
+- **ModuleType.Category**: Determines which bin in the Module Library the Module will appear in. Use one of the constants from the ModuleCategory class.
+- **ModuleType.Icon**: Not used in this example. A path to an image which appears next to the Module name in the app designer. For instance, “./images/module-icons/calculator.png” will result in a calculator icon.
+- **ModuleType.EditableInputs**: Not used in this example.
+- **ModuleType.Width**: Not used in this example. The default width of the Module in the Composable Designer. If not specified, it is 150 pixels.
+- **Description.Description**: The text which appears in tooltips and in the Module Info box in the Composable Designer.
 
 #### Sine Module with Inputs and Outputs
 
@@ -109,9 +109,9 @@ ModuleInput has a method, Get, that should be called from the Execute method, pa
 Similarly, ModuleOutput has a method, Set, that you call from the Execute method, passing the IExecutionContext argument and the value that you want to set as the output. If you don't call this, then the output will be the default value for the relevant type.
 
 !!! note
-    Module inputs and outputs can be lots of different types, including object. Module inputs and outputs of different types can be connected together; the values are converted implicitly.
+    Module inputs and outputs can be lots of different types, including `object`. Module inputs and outputs of different types can be connected together; the values are converted implicitly.
 
-There is another class, ModuleInputCollection, which is like ModuleInput except that more than one value can be passed into it (and so it can have more than one incoming connection in the Composable Designer). If you have, for instance, a ModuleInputCollection<int>, then its Get method returns a List<int> instead of an int. The default value for this kind of input is an empty List rather than null.
+There is another class, `ModuleInputCollection`, which is like `ModuleInput` except that more than one value can be passed into it (and so it can have more than one incoming connection in the Composable Designer). If you have, for instance, a `ModuleInputCollection<int>`, then its `Get` method returns a `List<int>` instead of an `int`. The default value for this kind of input is an `empty` `List` rather than `null`.
 
 !!! note
     There are other attributes that inputs and outputs can be associated with, that do various things.
@@ -224,4 +224,87 @@ namespace TextAnalytics
 
 ### Module ReadMe
 
-When your Module is done, add a readme for it. Find the Product/ModuleResources folder. Inside it, find the folder for your Module's namespace (i.e., the “comp.companalytics” in the attribute “[ModuleType(Name = “Hello World”, Namespace = “comp.companalytics”, Category = ModuleCategory.Operator)]”). For new Modules, this should be “companalytics”. Then, create a folder with your Module's full name (e.g. “Hello World”). Create a file called readme.md there. You won't have to build the solution after doing this – just try clicking the '?' button on your new Module and see if the readme appears. Refer to existing readmes for format. Markdown is supported for the formatting.
+When your Module is done, add a readme for it. Find the `Product/ModuleResources` folder. Inside it, find the folder for your Module's namespace (i.e., the `comp.companalytics` in the attribute `[ModuleType(Name = "Hello World", Namespace = "comp.companalytics", Category = "ModuleCategory.Operator")]`. For new Modules, this should be `companalytics`. Then, create a folder with your Module's full name (e.g. "Hello World"). Create a file called readme.md there. You won't have to build the solution after doing this - just try clicking the `?` button on your new Module and see if the readme appears. Refer to existing readmes for format. Markdown is supported for the formatting.
+
+### Versioning Modules
+
+Every so often it becomes necessary to update a Module, wether to add new inputs or outputs, or change the underlying function and logic. It is important to avoid breaking-changes to callers when updating a Module. In general, across all software development, "versioning" is a tough problem, because there often is existing code that takes a dependency on a specified interface, and that interface now needs to be updated.
+
+In most object-oriented and functional languages, there are a few ways developers accomplish making changes. One option is to change the interface and force callers to update, or be broken. With internal code, this is the standard operating procedure. But this is a hard stance, and most people outside the inner circle of the code-base will be upset with breaking changes.
+
+If you simply need to accept another argument from the caller, there are a couple of options. One is to add an optional argument, and set it's default value. Another way is to add an overloaded method with different arguments.
+
+If it's a large change, then the supporting modifications typically involve adding an additional method with a different name, arguments, and return values. And you can then deprecate the old functions. In a few versions down the road, most developers assume they can safely remove the code, and force any remaining callers of the old methods to update their code.
+
+The other option is to branch / snapshot the code base, and increment the version of your assemblies / packages. Callers will not be affected with changes to the newer versions of the assemblies, but will not get any updates or features, unless developers back port non-breaking changes to the older branches.
+
+In Composable, as described previously, [Modules](./04.Modules.md) have inputs and outputs (also called arguments). Developers specify their arguments through properties on a `ModuleExecutor` as described above. When a DataFlow application references a Module, a snapshot of the current Module version is taken to allow for connections and values to hang off the inputs and outputs. Any meta attributes (control, description, validation) on the inputs and outputs will be referenced rather than copied.
+
+!!! note
+    Composable allows you to make updates to a Module (such as adding a new argument, remove one, or changing the type of one) while still maintaining backwards compatibility.
+
+A `ModuleType` has a version, and a Module (the instantiated representation of a `ModuleType`) has a version.  A Module's version number is the ModuleType's version at instantiation time.  A developer can increment the `ModuleType`s version if argument changes are needed. These changes may include the following:
+
+- Adding an input or output
+- Removing an input or output
+- Renaming an input or output (add / remove)
+- Changing the type of a module input or output (add / remove)
+- Changing the order of inputs and outputs
+
+To increment the Module type version, just set it in the `ModuleType` attribute. Version numbers start at 0 by default.
+
+```csharp
+        [ModuleType(Name = "ModuleUpgradeTest", Namespace = "com.companalytics.unittest", Category = "UnitTest", Version = 2)]
+        [System.ComponentModel.Description("Test Upgrade Scenarios")]
+        public class ModuleUpgradeTest : ModuleExecutor
+        {
+
+        }
+```
+If you need to remove an argument, but still want old Modules to use it, and not be broken, you can use the `[Obsolete]` attribute.
+
+```csharp
+            [Obsolete("Use Param3")]
+            [System.ComponentModel.Description("numerical input")]
+            public ModuleInput<double> Param2 { get; set; }
+ 
+            [System.ComponentModel.Description("input")]
+            public ModuleInput<object> Param3 { get; set; }
+```
+
+`Param2` can still be used in the Module’s execute method to support old behaviors and code paths, but `Param2` won't exist on any new module instances.
+
+If you want to deprecate an entire Module, but still allow old instances to execute, you can mark the module type class with the `[Obsolete]` attribute. Modules with this attribute will no longer show up in the Module Library pallette.
+
+To perform an actual upgrade from one version to another, you need to create a Module upgrader. You can extend from the class `ModuleUpgrader<T>` where T :  ModuleExecutor.
+
+```csharp
+        [ModuleUpgrade(FromVersion = 0, ToVersion = 1, Description = "Remove Param1 and add Param2")]
+        public class ModuleUpgradeTestUpgrade1 : ModuleUpgrader<ModuleUpgradeTest>
+        {
+            public override void UpgradeModule(Module module)
+            {
+              //do anything you want to the module
+            }
+        }
+```
+
+Each Module upgrader migrates a Module from one version to another version. You will typically have an upgrader for each version. An upgrader can essentially do anything it wants to the Module to get into shape for the next version (e.g., adding arguments, removing arguments, changing / converting inputs values, and moving or removing connections). The base `ModuleUpgrader` class does have several methods to make the ugprade job a little easier.
+
+The default methods create the argument for you, and then it's your job to add it to the module in the right order, and move any values and connections over.
+
+```csharp
+    ModuleInput CreateDefaultInput(string name)
+```
+```csharp
+    ModuleOutput CreateDefaultOutput(string name)
+```
+
+The migrate methods will create the new default default argument, move any connections and values to the new argument, and remove the old one. These may not work in some scenarios: sophisticated types, connections should be removed rather than moved, argument order matters.
+
+```csharp
+void MigrateInput(Contracts.Module module, string fromName, string toName)
+```
+```csharp
+void MigrateOutput(Contracts.Module module, string fromName, string toName)
+```
