--- a/docs/DataFlows/07.Custom-Modules.md
+++ b/docs/DataFlows/07.Custom-Modules.md
@@ -26,9 +26,9 @@ The default plugin template comes with an example Module plugin:
 
 ![!Composable Custom Module New Project](img/03.07.Img_2.png)
 
-### Examples
+## Examples
 
-#### "Hello World" Module
+### "Hello World" Module
 
 A simple “Hello World” example of a Module looks like this:
 
@@ -116,7 +116,7 @@ There is another class, `ModuleInputCollection`, which is like `ModuleInput` exc
 !!! note
     There are other attributes that inputs and outputs can be associated with, that do various things.
 
-#### Word Counter Module
+### Word Counter Module
 
 Create a new C# class called **WordCounterModule** with the contents:
 
@@ -222,11 +222,11 @@ namespace TextAnalytics
 }
 ```
 
-### Module ReadMe
+## Module ReadMe
 
 When your Module is done, add a readme for it. Find the `Product/ModuleResources` folder. Inside it, find the folder for your Module's namespace (i.e., the `comp.companalytics` in the attribute `[ModuleType(Name = "Hello World", Namespace = "comp.companalytics", Category = "ModuleCategory.Operator")]`. For new Modules, this should be `companalytics`. Then, create a folder with your Module's full name (e.g. "Hello World"). Create a file called readme.md there. You won't have to build the solution after doing this - just try clicking the `?` button on your new Module and see if the readme appears. Refer to existing readmes for format. Markdown is supported for the formatting.
 
-### Versioning Modules
+# Versioning Modules
 
 Every so often it becomes necessary to update a Module, wether to add new inputs or outputs, or change the underlying function and logic. It is important to avoid breaking-changes to callers when updating a Module. In general, across all software development, "versioning" is a tough problem, because there often is existing code that takes a dependency on a specified interface, and that interface now needs to be updated.
 
