--- a/docs/DataFlows/10.Runs.md
+++ b/docs/DataFlows/10.Runs.md
@@ -8,12 +8,12 @@ some_url: https://docs.composable.ai
 
 ---
 
-# Runs
+# DataFlow Runs
 
-Each time a DataFlow application is executed by a user or through external activation, a *Run* is produced. Composable automatically saves the results for each module and saves them within a run. Previous Runs can be accessed through the Run History page, which displays the runs Times, status, and number of module results. The Run History page can be reached from the DataFlow Details page, or in the sidebar when viewing a DataFlow.
+Each time a DataFlow application is executed by a user or through external activation, a `Run` is produced. Composable automatically saves the results for each Module and saves them within a run. Previous Runs can be accessed through the Run History page, which displays the runs Times, status, and number of Module results. The Run History page can be reached from the DataFlow Details page, or in the sidebar when viewing a DataFlow, as explained below.
 
 !!! note
-    *Runs* are securable resources, similar to DataFlows, QueryViews, and WebApps. A *Run* and its included *Results* share the same access control entry.
+    `Runs` are securable resources, similar to DataFlows, QueryViews, and WebApps. A `Run` and its included `Results` share the same access control entry.
 
 ## Run Settings
 
@@ -23,7 +23,7 @@ In the DataFlow Designer Settings, there is an option to turn off Saving Runs.
 
 ## Past Runs
 
-All past Runs of a DataFlow are generally saved for a specified period of time (based on both the specific DataFlow's Run Retention Setting and the global retention settings configured by the Composable system admin).
+All past Runs of a DataFlow are generally saved for a specified period of time (based on both the specific DataFlow's Run Retention Setting and the global Composable instance retention settings configured by the Composable system admin).
 
 Past Runs can be view on the Run History page, by navigating to it from the Designer using the side navigation bar or from the DatFlow details page.
 
@@ -31,7 +31,7 @@ Past Runs can be view on the Run History page, by navigating to it from the Desi
 
 ![!Past Runs link on the DataFlow details page](img/Runs-03.png)
 
-The Run History page provides two main features: the Run Settings on the left and the Past Runs in the center of the page.
+The Run History page provides two main features: the **Run Settings** on the left and the **Past Runs** in the center of the page.
 
 ![!Past Runs page](img/Runs-04.png)
 
@@ -42,7 +42,7 @@ On the Run History page, the Run Settings panel allows the user to:
 - Set the min and max number of Runs that should be saved
 - Set the number of days Runs will be stored for
 - **Keep All Errors**: If selected, ensures that Runs that errored will not be removed
-- **Avoid Saving Activated Runs**: If selected, ensures that Runs activated outside of the designer, such as from activation modules or timers, will not be saved.
+- **Avoid Saving Activated Runs**: If selected, ensures that Runs activated outside of the designer, such as from activation Modules or timers, will not be saved.
 
 !!! note
     A global Composable Custodian Service cleans up (i.e., deletes) past Runs across the entire Composable instance based on a set schedule. This is typically set at 60 days, but can be configured differently by the Composable system administrator based on different business requirements.
