--- a/docs/DataPortals/01.Overview.md
+++ b/docs/DataPortals/01.Overview.md
@@ -19,7 +19,7 @@ Collecting, managing and viewing data, especially big or non-traditional data, o
 
 1. A database, with all tables, relationships and constraints required to represent the data model
 2. An ORM (object-relational mapper) layer to interact with the database
-3. Parameterizied queries for all CRUD operations
+3. Parameterized queries for all CRUD operations
 4. Web services to allow a front-end application to manipulate the data model via an API
 5. A full, responsive, extensible web application in HTML, CSS, & JavaScript with all of the field inputs, data views, routing, authentication, account management, and search capabilities the data model demands.
 
