--- a/docs/Composable-Platform/03.Search.md
+++ b/docs/Composable-Platform/03.Search.md
@@ -46,7 +46,7 @@ DataFlow module inputs can optionally be compared against the _Search Text_, by 
 *   **Tag** - Resources any user has given the tag `value`. Note this must be an exact match, unlike _Search Text_
 *   **Folder** - Limits results to contents of folder `value`. Adding "/*" to a folder name will also search all folders within it.
 
-    *   *Example:* Suppose a team stores Resources for various projects in separate folders (ProjectA, Probject B...) within the folder "/TeamName".  `folder:TeamName/ProjectA` returns Resourcess in the ProjectA folder.
+    *   *Example:* Suppose a team stores Resources for various projects in separate folders (ProjectA, Probject B...) within the folder "/TeamName".  `folder:TeamName/ProjectA` returns Resources in the ProjectA folder.
     *   *Example:* `folder:TeamApps/*` returns Resources in all ProjectName folders within "/TeamApps". If there are any folders within a project folder, their contents are returned listed as well.
 
 *   **Author** - Resources created by user with Username `value`.
@@ -94,7 +94,7 @@ The `and` operator takes precedence over `or`. Parentheses can be used to specif
 
 Results can be ordered using `sort:sortName:direction`. `direction` is optional, and can be either "asc" or "desc"; the default is "desc". Searches can have multiple levels of sorting. Available sortNames are:
 
-*   **Age** - Datime when Resources were created
+*   **Age** - Dateime when Resources were created
 *   **CloneCount** - Number of times Resource has been cloned.
 *   **Modified** - DateTime when Resources were last modified
 *   **Name** - Note the default descending direction starts at the end of the alphabet.
