edits to dataportals

--- a/docs/DataPortals/02.Create-DataPortals.md
+++ b/docs/DataPortals/02.Create-DataPortals.md
@@ -55,10 +55,17 @@ Each sheet in the Excel workbook represents a container which is a similar objec
 
 ## DataPortal Syntax
 
-When referncing another container/sheet, the syntax is `Form.<SheetName>`.
+When referencing another container/sheet, the syntax is `Form.<SheetName>`.
 
 When selecting multiple values, such as the [Columns](./06.Setting-Details/Columns.md) in a [Table](05.Control-Details/Table.md), put square brackets around the column names to select multple values. `[Form.<ContainerName>.<Column1>, Form.<ContainerName>.<Column2>, Form.<ContainerName>.<Column3>]`.
 
 ## Building a DataPortal 
 
-To build the DataPortal, simply save the Excel template, and drag and drop it into Composable. Done.
+To build the DataPortal, simply save the Excel template, and drag and drop it into Composable. **Done**.
+
+As Composable reads through and parses the Excel workbook, Composable is building the entire database layer, ORM layer as well as a full web-based CRUD (Create, Read, Update, Receive) interface.
+
+Once the DataPortal, a blue button will appear that allows you to access the web-based interface.
+
+![!Composable DataPortals - processing complete and ready to open](img/05.02.Img_4.png)
+
