Fix user profile links

--- a/docs/Users-and-Groups/01.Overview.md
+++ b/docs/Users-and-Groups/01.Overview.md
@@ -32,7 +32,7 @@ Every User in Composable starts out with a single auto-generated DashBoard that 
 
 ### User Profile
 
-Each User in Composable has a [User Profile](../Composable-Platform/05.User-Profile.md) page, where they can update basic information, change their password, select a theme, generate API authorization tokens, and perform other tasks. This is outlined in the [User Profile](../Composable-Platform/05.User-Profile.md) page.
+Each User in Composable has a [User Profile](./02.User-Profile.md) page, where they can update basic information, change their password, select a theme, generate API authorization tokens, and perform other tasks. This is outlined in the [User Profile](./02.User-Profile.md) page.
 
 ## Groups
 
