--- a/docs/DataFlows/04.Modules.md
+++ b/docs/DataFlows/04.Modules.md
@@ -21,17 +21,17 @@ Composable includes hundreds of first-class Modules that are developed by the pr
 
 ## Application Reference Module
 
-Custom Modules may be created by creating a new DataFlow with externalized inputs and outputs. For more information, please see [DataFlow Reuse](./06.DataFlow-Reuse.md). These Application Reference Modules may then be found under  the My DataFlows or Search All DataFlows categories in the Module Library.
+Custom Modules may be created by creating a new DataFlow with externalized inputs and outputs. For more information, please see [DataFlow Reuse](./06.DataFlow-Reuse.md). These Application Reference Modules may then be found under the `My DataFlows` or `Search All DataFlows` categories in the Module Library.
 
 ## Custom Module Extensions
 
-Custom Modules may also be created in code and brought into the Composable platform as Custom Module Extensions. To do this, developers may install a local copy of Composable, and also an IDE such as Visual Studio. Once installed, a "Composable Analytics Plugin” template should be available in Visual Studio under C#. Developers can select this template, select a name and location, and press the OK button. The default plugin template comes with an example Module plugin th at can be modified to create a custom Module with custom inputs and outputs.
+Custom Modules may also be created in code and brought into the Composable platform as Custom Module Extensions. To do this, developers may install a local copy of Composable, and also an IDE such as Visual Studio. Once installed, a "Composable Analytics Plugin" template should be available in Visual Studio under C#. Developers can select this template, select a name and location, and press the `OK` button. The default plugin template comes with an example Module plugin that can be modified to create a custom Module with custom inputs and outputs.
 
 After importing a Custom Module Extension into the Composable instance, these custom Modules appear as first-class Modules in the Module Library. The following [Custom Modules Extensions](./07.Custom-Modules.md) page includes more detailed information on authoring your own Modules.
 
 ## Module Features
 
-![Composable DataFlow Application](img/05.ModuleDescription.png)
+![Composable DataFlows - Module Structure](img/05.ModuleDescription.png)
 
 - **Name**: The name of the Module. A Module can be renamed by the user by double-clicking on the name. It is often helpful to document a DataFlow by renaming a Module to indicate its function. You are able to hover over the Module name to see its original name and description.
 - **Inputs**: Inputs can come from an output of another Module, or be defined in the Module itself. Values from other Modules take priority over the value defined in the Module. Hovering over the green node for each input will show a description and datatype of the input. Right-clicking on the input node will bring up Modules whose output object type matches the input object type. Clicking one of these Module options will add it to your DataFlow, and add a connection to the Module.
@@ -45,7 +45,7 @@ After importing a Custom Module Extension into the Composable instance, these cu
 
 - **Module Details**: Clicking the question mark icon will bring up a modal with the description of the Module as well as descriptions and object types for the inputs and outputs.
 
-![Composable DataFlow Application](img/05.ModuleDetails-01.png)
+![Composable DataFlows - Module Details](img/05.ModuleDetails-01.png)
 
 - **Right Click**: Right clicking a Module, or a selection of Modules, brings up a context menu with several options
     - **Disable/Enable**: Disables/enables execution of the Module. Only applies to current Designer session, disabled status is not saved. Keyboard shortcut Ctrl+E
@@ -58,7 +58,7 @@ After importing a Custom Module Extension into the Composable instance, these cu
     - **Iterations** (looped Modules only): Similar to statistics, displays the timing, duration and status for each iteration of a executed Module in a loop.
     - **Create DataFlow from Selection**: This will consolidate all of the selected Modules into one "Nested" Module and save it as a separate DataFlow. Double-clicking this nested Module will navigate you to the nested DataFlow.
 
-![Composable DataFlow Application](img/05.ModuleContextMenu-01.png)
+![Composable DataFlows - Module Context Menu](img/05.ModuleContextMenu-01.png)
 
 ## Module Upgrade
 
