--- a/docs/DataFlows/07.Custom-Modules.md
+++ b/docs/DataFlows/07.Custom-Modules.md
@@ -9,7 +9,7 @@ some_url: https://docs.composable.ai
 
 # Custom Module Extensions
 
-Custom Modules may also be created in code and brought into the Composable platform as Custom Module Extensions. To do this, developers may install a local copy of Composable, and also an IDE such as Visual Studio. Once installed, a "Composable Analytics Plugin” template should be available in Visual Studio under C#. Developers can select this template, select a name and location, and press the OK button. The default plugin template comes with an example Module plugin that can be modified to create a custom Module with custom inputs and outputs.
+Custom Modules may also be created in code and brought into the Composable platform as Custom Module Extensions. To do this, developers may install a local copy of Composable, and also an IDE such as Visual Studio. Once installed, a "Composable Analytics Plugin" template should be available in Visual Studio under C#. Developers can select this template, select a name and location, and press the `OK` button. The default plugin template comes with an example Module plugin that can be modified to create a custom Module with custom inputs and outputs.
 
 ## Create a Custom Module Extension
 
