--- a/docs/Getting-Started/03-1.Installation-GUI.md
+++ b/docs/Getting-Started/03-1.Installation-GUI.md
@@ -7,9 +7,9 @@ date: 2014-08-12
 some_url: https://docs.composable.ai
 ---
 
-# Composable Installation Wizard
+# Composable Installer GUI
 
-The Composable installation wizard will provide the following steps:
+The Composable Installer offers a GUI wizard that steps the user through the following installation steps:
 
 1. Check system and software requirements.
     - The installer will check system requirements, space availability and automatically download and install any required software, such as a back-end database store. Specifically, SQL Server Express will be downloaded and installed as a back-end database if required. Composable will leverage the full-text indexer if you install SQL Server with advanced services.
