--- a/docs/Getting-Started/04.Public-Cloud-Deployment.md
+++ b/docs/Getting-Started/04.Public-Cloud-Deployment.md
@@ -7,7 +7,16 @@ date: 2014-08-12
 some_url: https://docs.composable.ai
 ---
 
-# AWS Marketplace
+# Overview
+
+Composable is available in both the AWS and Azure public clouds.
+
+- [AWS](https://aws.amazon.com/marketplace/seller-profile?id=911f5969-ae5e-4de9-acca-b8f606972771).
+- [Azure](https://azuremarketplace.microsoft.com/en-us/marketplace/apps/composable.composable).
+
+The sections below provide a step-by-step guide to launching a Composable cloud instance.
+
+## AWS Marketplace
 
 Composable is available in the AWS Marketplace at [AWS](https://aws.amazon.com/marketplace/seller-profile?id=911f5969-ae5e-4de9-acca-b8f606972771).
 
@@ -42,7 +51,7 @@ Composable is available in the AWS Marketplace at [AWS](https://aws.amazon.com/m
     !!! Usage-Instructions
         Composable DataOps Platform can be accessed via any browser (Chrome, Firefox, IE, Edge, ...). Once the instance is running, you can point your web browser to http://<public hostname>/CompAnalytics/, where <public hostname> is the public IP address for your instance (e.g., ec2-12-345-678-90.us-west-2.compute.amazonaws.com) listed in the EC2 Dashboard within the AWS Console. You may also connect to this instance directly using Remote Desktop Connection, and navigate to localhost/CompAnalytics. The password for username "admin" will be dynamically set to the EC2 instance ID. (e.g., username "admin" and password "i-03cfe92f81f787655"). Instance ID can be retrieved from the AWS Console once your VM is launched. You may modify rules in the security group to control the inbound and outbound traffic to this instance.
 
-# Azure Marketplace
+## Azure Marketplace
 
 Composable is available in the Azure Marketplace at [Azure](https://azuremarketplace.microsoft.com/en-us/marketplace/apps/composable.composable).
 
